--- a/_posts/2017-09-17-B01.md
+++ b/_posts/2017-09-17-B01.md
@@ -28,16 +28,16 @@ jekyll是生成GitHub Pages的引擎，本地部署jekyll就可以在本地看Bl
 
 先到官网下载[nodejs][5]，安装完了之后在npm目录新建node_global和node_cache两个文件夹，设置这两个文件夹为npm全局下载的目录，最后配置一下环境变量，新建NODE_PATH变量，Path上添加node_global路径
 > npm config set prefix "D:\Develop\nodejs\node_global"
-npm config set cache "D:\Develop\nodejs\node_cache"
-NODE_PATH: D:\Develop\nodejs\node_global\node_modules
-Path: D:\Develop\nodejs\node_global
+> npm config set cache "D:\Develop\nodejs\node_cache"
+> NODE_PATH: D:\Develop\nodejs\node_global\node_modules
+> Path: D:\Develop\nodejs\node_global
 
 安装cnpm，因为npm的源服务器在国外，比较慢，使用cnpm快一点。
 > npm install cnpm -g --registry=https://registry.npm.taobao.org
 
 安装gulp和yarn
 > cnpm install gulp -g
-cnpm install yarn -g
+> cnpm install yarn -g
 
 最后在项目路径下执行
 > yarn
