--- a/_posts/2017-09-17-B01.md
+++ b/_posts/2017-09-17-B01.md
@@ -27,28 +27,17 @@ jekyll是生成GitHub Pages的引擎，本地部署jekyll就可以在本地看Bl
 下载下来模板虽然可以用了，但是有一些我不喜欢，必须得改改。前端只是略懂皮毛啊，怎么办呢。分析了一下模板的各个文件，发现有'gulpfile.js'和'yarn.lock'。幸好gulp我还知道，yarn查了一下是个类似npm的依赖管理工具。
 
 先到官网下载[nodejs][5]，安装完了之后在npm目录新建node_global和node_cache两个文件夹，设置这两个文件夹为npm全局下载的目录，最后配置一下环境变量，新建NODE_PATH变量，Path上添加node_global路径
-<<<<<<< HEAD
 > npm config set prefix "D:\Develop\nodejs\node_global" <br >
- npm config set cache "D:\Develop\nodejs\node_cache" <br >
-> NODE_PATH: D:\Develop\nodejs\node_global\node_modules <br >
-=======
-> npm config set prefix "D:\Develop\nodejs\node_global"
-> npm config set cache "D:\Develop\nodejs\node_cache"
-> NODE_PATH: D:\Develop\nodejs\node_global\node_modules
->>>>>>> 02feb1ba2868e8dcf72342073f76241a29ff327d
-> Path: D:\Develop\nodejs\node_global
+npm config set cache "D:\Develop\nodejs\node_cache" <br >
+NODE_PATH: D:\Develop\nodejs\node_global\node_modules <br >
+Path: D:\Develop\nodejs\node_global
 
 安装cnpm，因为npm的源服务器在国外，比较慢，使用cnpm快一点。
 > npm install cnpm -g --registry=https://registry.npm.taobao.org
 
 安装gulp和yarn
-<<<<<<< HEAD
 > cnpm install gulp -g <br >
-> cnpm install yarn -g <br >
-=======
-> cnpm install gulp -g
-> cnpm install yarn -g
->>>>>>> 02feb1ba2868e8dcf72342073f76241a29ff327d
+cnpm install yarn -g <br >
 
 最后在项目路径下执行
 > yarn
