--- a/_posts/2017-09-18-C01.md
+++ b/_posts/2017-09-18-C01.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 'Java基础'
+title: 'Java-基础篇'
 image: ''
 date: 2017-09-18
 tags:
@@ -33,6 +33,28 @@ categories:
 8. **Lambda表达式**，仔细看一下例子，理解正确使用Lambda表达式的姿势，还有了解**聚合操作**
 9. 方法引用
 
+#### [接口与继承][10]
+了解接口的定义、使用，理解继承在Java语言的作用
+
+#### [Numbers & String][11]
+1. 基本数据类型的包装类，方法都有哪些？
+2. 格式化输出，大致知道那些格式化的标记
+3. 数学计算相关的库-**Math**
+4. Charater类
+5. String类
+6. StringBuilder
+7. 了解Charater String StrignBuilder的使用时机
+
+#### [泛型][12]
+1. 为什么用泛型
+2. 泛型方法
+3. 有界类型参数
+
+
+
+
+
+
 
 
 
@@ -58,3 +80,6 @@ categories:
 [7]: http://docs.oracle.com/javase/tutorial/java/nutsandbolts/expressions.html
 [8]: http://docs.oracle.com/javase/tutorial/java/nutsandbolts/flow.html
 [9]: http://docs.oracle.com/javase/tutorial/java/javaOO/index.html
+[10]: http://docs.oracle.com/javase/tutorial/java/IandI/index.html
+[11]: http://docs.oracle.com/javase/tutorial/java/data/index.html
+[12]: http://docs.oracle.com/javase/tutorial/java/generics/index.html
